Fixes for order summary layout on mobile

--- a/css/compat/themes/compat-woodmart-209.css
+++ b/css/compat/themes/compat-woodmart-209.css
@@ -3,8 +3,8 @@ body.theme-woodmart.has-checkout-header .page-title {
 }
 
 body.theme-woodmart.woocommerce-checkout .content-layout-wrapper {
-  margin-right: 0;
   margin-left: 0;
+  margin-right: 0;
 }
 
 body.theme-woodmart div.woocommerce .form-row.form-row .woocommerce-error:before {
@@ -28,16 +28,16 @@ body.theme-woodmart div.woocommerce .form-row.form-row .woocommerce-error::after
 
 body.theme-woodmart div.woocommerce form .form-row.woocommerce-validated:not([class*=woocommerce-invalid]):not(.fc-no-validation-icon) .select2-selection:after {
   top: 7px;
-  left: 20px;
+  right: 20px;
 }
 body.theme-woodmart div.woocommerce form .form-row.woocommerce-validated:not([class*=woocommerce-invalid]).fc-select2-field:not(.fc-no-validation-icon) select:not([required]) ~ .select2-container .select2-selection:after {
-  left: 30px;
+  right: 30px;
 }
 
 body.theme-woodmart .fc-wrapper .fc-coupon-codes__coupon-amount .woocommerce-remove-coupon {
   position: relative;
-  margin-right: 5px;
-  margin-left: -5px;
+  margin-left: 5px;
+  margin-right: -5px;
   width: 30px;
   height: 30px;
   line-height: inherit;
@@ -53,7 +53,7 @@ body.theme-woodmart .fc-wrapper .fc-coupon-codes__coupon-amount .woocommerce-rem
   position: absolute;
   display: block;
   top: 0;
-  right: 0;
+  left: 0;
   width: 30px;
   height: 30px;
   line-height: 30px;
@@ -70,7 +70,7 @@ body.theme-woodmart .fc-checkout-order-review .wd-table-wrapper {
 }
 
 body.theme-woodmart form.woocommerce-checkout .fc-wrapper #order_review table.woocommerce-checkout-review-order-table .cart-discount .woocommerce-remove-coupon {
-  margin-left: -10px;
+  margin-right: -10px;
 }
 
 body.theme-woodmart div.woocommerce form .form-row span.select2-container {
@@ -145,20 +145,20 @@ body.theme-woodmart .fc-wrapper .select2-container .select2-selection--single .s
 body.theme-woodmart .fc-wrapper .select2-container .select2-selection--multiple .select2-selection__rendered {
   display: block;
   margin-bottom: 0;
-  padding-right: 5px !important;
   padding-left: 5px !important;
+  padding-right: 5px !important;
 }
 
 body.theme-woodmart div.woocommerce form .form-row .select2-selection .select2-selection__arrow {
-  left: 5px !important;
+  right: 5px !important;
 }
 
 body.theme-woodmart div.woocommerce form .form-row .select2-selection .select2-selection__clear {
-  left: 24px;
+  right: 24px;
 }
 
 body.theme-woodmart div.woocommerce form .form-row .select2-selection--multiple .select2-selection__clear {
-  left: 5px;
+  right: 5px;
 }
 
 body.theme-woodmart div.woocommerce form .form-row .select2-selection--multiple .select2-search--inline {
